--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -22,8 +22,9 @@
 .promo__image {
     position: absolute;
     z-index: 0;
-    top: 82px;
-    left: 410px;
+    top: 242px;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .promo__title {
