--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 #root {
     min-height: 100%;
-    background-color: rgb(236, 236, 160);
+    background-color: #272727;
     display: flex;
     flex-direction: column;
     justify-content: center;
