--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -1,8 +1,10 @@
 .about-me {
     width: 100%;
-    /* height: 1079px; */
     background-color: #202020;
     color: #FFF;
+    box-sizing: border-box;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .about-me__wrapper {
