--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -1,6 +1,9 @@
 .nav {
     width: 100%;
     background-color: #272727;
+    box-sizing: border-box;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .nav__wrapper {
