--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -8,11 +8,26 @@
     padding-top: 111px;
 }
 
+@media screen and (max-width: 865px) {
+    .about-project {
+        height: 585px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 90px;
+    }
+}
+
 .about-project__wrapper {
     /* height: 608px; */
     max-width: 1140px;
     color: #FFF;
     margin: 0 auto 0 auto;
+}
+
+@media screen and (max-width: 865px) {
+    .about-project__wrapper {
+        max-width: 668px;
+    }
 }
 
 .about-project__title {
@@ -39,10 +54,23 @@
     justify-content: space-between;
 }
 
+@media screen and (max-width: 865px) {
+    .about-project__list {
+        gap: 30px;
+        margin-bottom: 94px;
+    }
+}
+
 .about-project__list-element {
     display: flex;
     flex-direction: column;
     gap: 26px;
+}
+
+@media screen and (max-width: 865px) {
+    .about-project__list-element {
+        gap: 22px;
+    }
 }
 
 .about-project__subtitle {
@@ -65,10 +93,20 @@
     line-height: 20px;
 }
 
+@media screen and (max-width: 865px) {
+    .about-project__description {
+        font-family: Inter;
+        font-size: 12px;
+        line-height: 18px;
+    }
+}
+
 /* ____________________________________ */
 
 .about-project__timing {
     display: flex;
+    max-width: 1140px;
+    /* width: 100%; */
 }
 
 .about-project__backend {
@@ -78,6 +116,12 @@
     max-width: 228px;
     width: 100%;
     text-align: center;
+}
+
+@media screen and (max-width: 865px) {
+    .about-project__backend {
+        max-width: 140px;
+    }
 }
 
 .about-project__backend-chart {
@@ -96,7 +140,7 @@
     display: flex;
     flex-direction: column;
     gap: 14px;
-    width: 100%;
+    width: 80%;
     text-align: center;
 }
 
