--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -7,6 +7,13 @@
     padding-right: 20px;
 }
 
+@media screen and (max-width: 865px) {
+    .portfolio {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+}
+
 .portfolio__wrapper {
     display: flex;
     flex-direction: column;
@@ -14,6 +21,12 @@
     padding-bottom: 100px;
     max-width: 1140px;
     margin: 0 auto 0 auto;
+}
+
+@media screen and (max-width: 865px) {
+    .portfolio__wrapper {
+        max-width: 668px;
+    }
 }
 
 .portfolio__title {
@@ -40,7 +53,11 @@
     display: flex;
     justify-content: space-between;
     height: 69px;
-    border-bottom: 1px solid #424242;
+    border-bottom: 1px solid #E6E6E6;
+}
+
+.portfolio__bullet:last-child {
+    border-bottom: none;
 }
 
 .portfolio__link {
@@ -55,6 +72,12 @@
     line-height: 50px;
     letter-spacing: -1.2px;
     text-decoration: none;
+}
+
+@media screen and (max-width: 865px) {
+    .portfolio__link {
+        font-size: 28px;
+    }
 }
 
 .portfolio__link-img {
