--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -8,11 +8,24 @@
     padding-right: 20px;
 }
 
+@media screen and (max-width: 865px) {
+    .technologies {
+        padding-top: 90px;
+    }
+}
+
 .technologies__wrapper {
     max-width: 1140px;
     width: 100%;
     height: 525px;
     margin: 0 auto 0 auto;
+}
+
+@media screen and (max-width: 865px) {
+    .technologies__wrapper {
+        height: 477px;
+        max-width: 668px;
+    }
 }
 
 .technologies__title {
@@ -41,6 +54,13 @@
     letter-spacing: -2px;
 }
 
+@media screen and (max-width: 865px) {
+    .technologies__subtitle {
+        padding-top: 80px;
+        padding-bottom: 22px;
+    }
+}
+
 .technologies__description {
     margin: 0 auto 100px auto;
     max-width: 460px;
@@ -51,6 +71,16 @@
     font-weight: 400;
     line-height: 20px;
     letter-spacing: -0.56px;
+}
+
+@media screen and (max-width: 865px) {
+    .technologies__description {
+        margin-bottom: 83px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 18px;
+        letter-spacing: -0.48px;
+    }
 }
 
 .technologies__list {
@@ -72,6 +102,13 @@
     border-radius: 10px;
 }
 
+@media screen and (max-width: 865px) {
+    .technologies__bullet {
+        width: 84px;
+        height: 57px;
+    }
+}
+
 .technologies__tech {
     margin: 0;
     font-family: Inter;
@@ -80,4 +117,12 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.56px;
+}
+
+@media screen and (max-width: 865px) {
+    .technologies__tech {
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: -0.48px;
+    }
 }
