--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
     /* align-items: center; */
+}
+
+@media screen and (max-width: 865px) {
+    #root {
+        width: 100%;
+    }
 }
