сверстан компонент Movies

--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -3,6 +3,7 @@
     background-color: #202020;
     color: #FFF;
     box-sizing: border-box;
+    padding-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
 }
