--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,7 @@
     padding-right: 70px;
 }
 
-@media screen and (max-width: 865px) {
+@media screen and (max-width: 927px) {
     .header {
         padding-left: 30px;
         padding-right: 30px;
@@ -19,6 +19,11 @@
 .header_type_form-page {
     background-color: #202020;
     height: 217px;
+}
+
+.header_type_movies {
+    background-color: #202020;
+    height: 74px;
 }
 
 .header__wrapper {
@@ -35,6 +40,73 @@
         /* max-width: 768px; */
         box-sizing: border-box;
     }
+}
+
+.header__wrapper_type_movies {
+    gap: 44px;
+}
+
+.header__nav {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.header__nav-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.header__nav-link {
+    cursor: pointer;
+    border: none;
+    padding: 0;
+    background-color: #202020;
+    color: #FFF;
+    text-align: right;
+    font-family: Inter;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 18px;
+}
+
+.header__account-button {
+    /* text-decoration: none; */
+    cursor: pointer;
+    display: flex;
+    gap: 7px;
+    align-items: center;
+    border: none;
+    border-radius: 40px;
+    box-sizing: border-box;
+    padding: 0 0 0 11px;
+    border-radius: 40px;
+    background: #202020;
+    box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
+    color: #FFF;
+    font-family: Inter;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 12px;
+    width: 100px;
+    height: 32px;
+}
+
+.header__account-logo {
+    height: 26px;
+    width: 26px;
+    background: url('../../images/account-logo.svg') no-repeat center #313131;
+    border-radius: 50%;
+}
+
+.header__wrapper_type_movies {
+
 }
 
 .header__wrapper_type_form-page {
