--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    /* align-items: center; */
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 @media screen and (max-width: 865px) {
