--- a/src/styles/commonStyles.css
+++ b/src/styles/commonStyles.css
@@ -78,6 +78,10 @@
     line-height: normal;
 }
 
+.form-page__button:hover {
+    opacity: 0.8;
+}
+
 .form-page__question {
     display: block;
     text-align: center;
@@ -101,6 +105,10 @@
     font-weight: 400;
     line-height: normal;
     text-decoration: none;
+}
+
+.form-page__link:hover {
+    opacity: 0.7;
 }
 
 .form-page__error-message {
