оптимизация кода для рендера карточек на страницах movies и saved-movies

--- a/src/components/Movies/MoviesCard/MovieCard.css
+++ b/src/components/Movies/MoviesCard/MovieCard.css
@@ -14,7 +14,8 @@
 .card__image {
     width: 364px;
     height: 203px;
-    object-fit: cover;
+    object-fit: contain;
+    /* object-fit:fill; */
     display: block;
 }
 
