--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -77,6 +77,7 @@
 }
 
 .profile__edit-button {
+    align-self: center;
     height: 20px;
     cursor: pointer;
     border: none;
@@ -96,6 +97,7 @@
 }
 
 .profile__logout-button {
+    align-self: center;
     height: 20px;
     cursor: pointer;
     border: none;
