исправление багов, доделан компонент Profile

--- a/src/components/Movies/MoviesCard/MovieCard.css
+++ b/src/components/Movies/MoviesCard/MovieCard.css
@@ -14,8 +14,10 @@
 .card__image {
     width: 364px;
     height: 203px;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
     object-fit: contain;
-    /* object-fit:fill; */
+    object-fit: cover;
     display: block;
 }
 
