--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -10,6 +10,7 @@
 
 @media screen and (max-width: 865px) {
     .portfolio {
+        padding-top: 0;
         padding-left: 50px;
         padding-right: 50px;
     }
