--- a/src/styles/commonStyles.css
+++ b/src/styles/commonStyles.css
@@ -65,7 +65,7 @@
 }
 
 .form-page__button {
-    margin-top: 11px;
+    margin-top: 21px;
     cursor: pointer;
     border: none;
     padding: 0;
@@ -115,10 +115,14 @@
     opacity: 0.7;
 }
 
-.form-page__error-message {
+.form-page__error-message-container {
+    box-sizing: border-box;
     display: block;
     height: 70px;
-    margin: 10px 0 0 0;
+}
+
+.form-page__error-message {
+    display: none;
     color: #EE3465;
     font-family: Inter;
     font-size: 10px;
@@ -127,11 +131,22 @@
     line-height: normal;
 }
 
+.form-page__error-message_active {
+    display: block;
+}
+
 /* __________кнопка "еще"__________ */
 
 .expand-button {
     margin-top: 60px;
     margin-bottom: 75px;
+}
+
+@media screen and (max-width: 865px) {
+    .expand-button {
+        margin-top: 81px;
+        margin-bottom: 110px;
+    }
 }
 
 .expand-button__wrapper {
