--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -7,6 +7,13 @@
     padding-right: 20px;
 }
 
+@media screen and (max-width: 467px) {
+    .about-me {
+        padding-left: 14px;
+        padding-right: 14px;
+    }
+}
+
 .about-me__wrapper {
     display: flex;
     flex-direction: column;
@@ -24,9 +31,25 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .about-me__wrapper {
+        max-width: 668px;
+        padding-top: 74px;
+        padding-bottom: 70px;
+    }
+}
+
 .about-me__info-container {
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 717px) {
+    .about-me__info-container {
+        flex-direction: column;
+        max-width: 400px;
+        /* margin: 0 auto; */
+    }
 }
 
 .about-me__title {
@@ -41,9 +64,23 @@
     letter-spacing: -0.88px;
 }
 
+@media screen and (max-width: 467px) {
+    .about-me__title {
+        font-size: 18px;
+        letter-spacing: -0.72px;
+        padding-bottom: 28px;
+    }
+}
+
 .about-me__info {
     box-sizing: border-box;
     padding-top: 67px;
+}
+
+@media screen and (max-width: 467px) {
+    .about-me__info {
+        padding-top: 40px;
+    }
 }
 
 .about-me__subtitle {
@@ -59,9 +96,16 @@
 @media screen and (max-width: 865px) {
     .about-me__subtitle {
         font-size: 40px;
-        font-weight: 400;
         line-height: 40px;
         letter-spacing: -1.6px;
+    }
+}
+
+@media screen and (max-width: 467px) {
+    .about-me__subtitle {
+        font-size: 30px;
+        line-height: normal;
+        letter-spacing: -1.2px;
     }
 }
 
@@ -81,6 +125,14 @@
         font-size: 12px;
         line-height: 18px;
         padding-top: 16px;
+    }
+}
+
+@media screen and (max-width: 467px) {
+    .about-me__main-info {
+        font-size: 11px;
+        line-height: 16px;
+        padding-top: 20px;
     }
 }
 
@@ -113,6 +165,14 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .about-me__description {
+        width: 292px;
+        font-size: 11px;
+        line-height: 16px;
+    }
+}
+
 .about-me__github {
     display: block;
     margin-top: 53px;
@@ -135,6 +195,12 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .about-me__github {
+        margin-top: 64px;
+    }
+}
+
 .about-me__photo {
     display: block;
     box-sizing: border-box;
@@ -148,5 +214,19 @@
     .about-me__photo {
         width: 255px;
         height: 307px;
+    }
+}
+
+@media screen and (max-width: 717px) {
+    .about-me__photo {
+        order: -1;
+    }
+}
+
+@media screen and (max-width: 467px) {
+    .about-me__photo {
+        width: 292px;
+        height: 352px;
+        margin-top: 60px;
     }
 }
