--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -17,6 +17,15 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .about-project {
+        /* height: 585px; */
+        padding-left: 18px;
+        padding-right: 18px;
+        padding-top: 71px;
+    }
+}
+
 .about-project__wrapper {
     /* height: 608px; */
     max-width: 1140px;
@@ -43,6 +52,13 @@
     border-bottom: 1px solid #DADADA;
 }
 
+@media screen and (max-width: 467px) {
+    .about-project__title {
+        font-size: 18px;
+        padding-bottom: 28px;
+    }
+}
+
 .about-project__list {
     box-sizing: border-box;
     padding-top: 70px;
@@ -58,6 +74,15 @@
     .about-project__list {
         gap: 30px;
         margin-bottom: 94px;
+        padding-top: 61px;
+    }
+}
+
+@media screen and (max-width: 467px) {
+    .about-project__list {
+        flex-direction: column;
+        gap: 59px;
+        margin-bottom: 60px;
     }
 }
 
@@ -73,6 +98,12 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .about-project__list-element {
+        gap: 16px;
+    }
+}
+
 .about-project__subtitle {
     margin: 0;
     font-family: Inter;
@@ -81,6 +112,13 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.8px;
+}
+
+@media screen and (max-width: 467px) {
+    .about-project__subtitle {
+        font-size: 18px;
+        letter-spacing: -0.72px;
+    }
 }
 
 .about-project__description {
@@ -95,9 +133,15 @@
 
 @media screen and (max-width: 865px) {
     .about-project__description {
-        font-family: Inter;
         font-size: 12px;
         line-height: 18px;
+    }
+}
+
+@media screen and (max-width: 467px) {
+    .about-project__description {
+        font-size: 11px;
+        line-height: 16px;
     }
 }
 
@@ -124,6 +168,13 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .about-project__backend {
+        max-width: 100px;
+        gap: 7px;
+    }
+}
+
 .about-project__backend-chart {
     line-height: 36px;
     background-color: #3DDC84;
@@ -144,10 +195,25 @@
     text-align: center;
 }
 
+@media screen and (max-width: 467px) {
+    .about-project__frontend {
+        gap: 7px;
+    }
+}
+
 .about-project__duration {
     display: inline;
     margin: 0;
     padding: 0;
+}
+
+@media screen and (max-width: 467px) {
+    .about-project__duration {
+        font-size: 11px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
 }
 
 .about-project__frontend-chart {
@@ -170,4 +236,10 @@
     font-style: normal;
     font-weight: 500;
     line-height: 17px;
+}
+
+@media screen and (max-width: 467px) {
+    .about-project__chart-info {
+        font-size: 11px;
+    }
 }
