--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -16,6 +16,13 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .portfolio {
+        padding-left: 14px;
+        padding-right: 14px;
+    }
+}
+
 .portfolio__wrapper {
     display: flex;
     flex-direction: column;
@@ -41,6 +48,12 @@
     line-height: 20px; 
 }
 
+@media screen and (max-width: 467px) {
+    .portfolio__title {
+        font-size: 14px;
+    }
+}
+
 .portfolio__link-list {
     box-sizing: border-box;
     display: flex;
@@ -51,11 +64,24 @@
     padding: 50px 0 0 0;
 }
 
+@media screen and (max-width: 467px) {
+    .portfolio__link-list {
+        padding-top: 30px;
+        gap: 10px;
+    }
+}
+
 .portfolio__bullet {
     display: flex;
     justify-content: space-between;
     height: 69px;
     border-bottom: 1px solid #E6E6E6;
+}
+
+@media screen and (max-width: 467px) {
+    .portfolio__bullet {
+        height: 57px;
+    }
 }
 
 .portfolio__bullet:last-child {
@@ -86,12 +112,29 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .portfolio__link {
+        font-size: 18px;
+        letter-spacing: -0.72px;
+    }
+}
+
 .portfolio__link-img {
     display: block;
     margin: 18px 5px 0 0;
     height: 18px;
+    width: 18px;
+    background: url('../../../images/link-image-portfolio-min-mobile.svg') center no-repeat;
 }
 
 .portfolio__link-img:hover {
     opacity: 0.7;
+}
+
+@media screen and (max-width: 467px) {
+    .portfolio__link-img {
+        height: 10px;
+        width: 10px;
+        margin: 17px 4px 0 0;
+    }
 }
