компонент Movies адаптирован под 320px

--- a/src/components/Header/HeaderNavigate/HeaderNavigate.css
+++ b/src/components/Header/HeaderNavigate/HeaderNavigate.css
@@ -35,6 +35,13 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .header__menu {
+        background: url('../../../images/menu-icon-mobile.svg');
+        width: 40px;
+    }
+}
+
 .header__nav-list {
     list-style-type: none;
     padding: 0;
