--- a/src/components/Movies/MoviesCard/MovieCard.css
+++ b/src/components/Movies/MoviesCard/MovieCard.css
@@ -14,6 +14,13 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .card {
+        width: 300px;
+        height: 237px;
+    }
+}
+
 .card:nth-child(n+3) {
     margin-top: 20px;
 }
@@ -32,6 +39,13 @@
     .card__image {
         width: 339px;
         height: 190px;
+    }
+}
+
+@media screen and (max-width: 467px) {
+    .card__image {
+        width: 300px;
+        height: 168px;
     }
 }
 
@@ -57,6 +71,13 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .card__title {
+        margin: 15px 0 0 14px;
+        font-size: 12px;
+    }
+}
+
 .card__duration {
     margin: 17px 0 0 16px;
     color: #8B8B8B;
@@ -70,6 +91,13 @@
 @media screen and (max-width: 865px) {
     .card__duration {
         margin: 15px 0 0 14px;
+    }
+}
+
+@media screen and (max-width: 467px) {
+    .card__duration {
+        margin: 14px 0 0 14px;
+        font-size: 10px;
     }
 }
 
