--- a/src/components/Movies/MoviesCardList/MovieCardList.css
+++ b/src/components/Movies/MoviesCardList/MovieCardList.css
@@ -28,6 +28,12 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .movie-block__wrapper {
+        padding-top: 40px;
+    }
+}
+
 .movie-block__list {
     margin: 0 auto;
     display: flex;
@@ -48,6 +54,14 @@
 @media screen and (max-width: 784px) {
     .movie-block__list {  
         width: 339px;
+    }
+}
+
+@media screen and (max-width: 467px) {
+    .movie-block__list {  
+        gap: 14px;
+        width: 300px;
+        margin: 0 auto;
     }
 }
 
