--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -28,6 +28,12 @@
     height: 217px;
 }
 
+@media screen and (max-width: 467px) {
+    .header_type_form-page {
+        margin-bottom: 36px;
+    }
+}
+
 .header_type_movies {
     background-color: #202020;
     height: 74px;
@@ -62,73 +68,6 @@
     gap: 44px;
 }
 
-/* .header__nav {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-}
-
-.header__nav-list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    gap: 16px;
-}
-
-.header__nav-link {
-    cursor: pointer;
-    border: none;
-    padding: 0;
-    background-color: #202020;
-    color: #FFF;
-    text-align: right;
-    font-family: Inter;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 18px;
-} */
-
-/* .header__nav-link_active { */
-    /* border-bottom: 2px solid #000000; */
-    /* color: red; */
-/* } */
-
-/* .header__account-button {
-    cursor: pointer;
-    display: flex;
-    gap: 7px;
-    align-items: center;
-    border: none;
-    border-radius: 40px;
-    box-sizing: border-box;
-    padding: 0 0 0 11px;
-    border-radius: 40px;
-    background: #202020;
-    box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
-    color: #FFF;
-    font-family: Inter;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 12px;
-    width: 100px;
-    height: 32px;
-} */
-
-/* .header__account-logo {
-    height: 26px;
-    width: 26px;
-    background: url('../../images/account-logo-min.svg') no-repeat center #313131;
-    border-radius: 50%;
-} */
-
-.header__wrapper_type_movies {
-
-}
-
 .header__wrapper_type_form-page {
     box-sizing: border-box;
     padding-top: 70px;
@@ -142,47 +81,9 @@
     margin: 0 auto 0 auto;
 }
 
-/* .header__buttons {
-    display: flex;
-    height: 32px;
-    gap: 30px;
+@media screen and (max-width: 467px) {
+    .header__wrapper_type_form-page {
+        padding: 56px 0 44px 0;
+        align-items: center;
+    }
 }
-
-.header__signup-button {
-    width: 77px;
-    height: 32px;
-    background-color: #073042;
-    color: #FFF;
-    font-family: Inter;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px;
-    padding: 0;
-    border: none;
-    cursor: pointer;
-}
-
-.header__signup-button:hover {
-    opacity: 0.8;
-}
-
-.header__signin-button {
-    width: 76px;
-    height: 32px;
-    border-radius: 3px;
-    background-color: #3DDC84;
-    color: #000;
-    font-family: Inter;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px;
-    padding: 0;
-    border: none;
-    cursor: pointer;
-}
-
-.header__signin-button:hover {
-    opacity: 0.8;
-} */
