--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -9,6 +9,12 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .profile {
+        margin-top: 0;
+    }
+}
+
 .profile__wrapper {
     max-width: 410px;
     margin: 0 auto;
@@ -28,6 +34,12 @@
     overflow: hidden;
 }
 
+@media screen and (max-width: 467px) {
+    .profile__title {
+        margin-top: 70px;
+    }
+}
+
 .profile__info-container {
     display: flex;
     flex-direction: column;
@@ -40,6 +52,15 @@
 @media screen and (max-width: 865px) {
     .profile__info-container {
         margin-top: 79px;
+    }
+}
+
+@media screen and (max-width: 467px) {
+    .profile__info-container {
+        max-width: 260px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 63px;
     }
 }
 
@@ -99,6 +120,12 @@
     }
 }
 
+@media screen and (max-width: 865px) {
+    .profile__control {
+        margin-top: 164px;
+    }
+}
+
 .profile__error-message {
     margin: 0;
     display: none;
@@ -131,6 +158,12 @@
     background-color: #202020;
 }
 
+@media screen and (max-width: 865px) {
+    .profile__edit-button {
+        font-size: 12px;
+    }
+}
+
 .profile__edit-button:hover {
     opacity: 0.7;
 }
@@ -149,6 +182,12 @@
     font-weight: 500;
     line-height: normal;
     background-color: #202020;
+}
+
+@media screen and (max-width: 865px) {
+    .profile__logout-button {
+        font-size: 12px;
+    }
 }
 
 .profile__logout-button:hover {
@@ -170,6 +209,13 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+}
+
+@media screen and (max-width: 865px) {
+    .profile__save-button {
+        width: 260px;
+        margin: 0 auto;
+    }
 }
 
 .profile__save-button:hover {
