--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
     background-color: #202020;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     width: 100%;
     min-height: 100vh;
     font-family: 'Inter', sans-serif;
