--- a/src/styles/commonStyles.css
+++ b/src/styles/commonStyles.css
@@ -12,6 +12,12 @@
     margin: 0 auto;
 }
 
+@media screen and (max-width: 467px) {
+    .form-page__wrapper {
+        width: 260px;
+    }
+}
+
 .form-page__form {
     height: 100%;
     display: flex;
@@ -56,6 +62,12 @@
     line-height: normal;
 }
 
+@media screen and (max-width: 467px) {
+    .form-page__input {
+        width: 260px;
+    }
+}
+
 .form-page__input_error {
     color: #EE3465;
 }
@@ -82,9 +94,23 @@
     line-height: normal;
 }
 
+@media screen and (max-width: 467px) {
+    .form-page__button {
+        width: 260px;
+        font-size: 12px;
+    }
+}
+
 .form-page__button:hover {
     opacity: 0.8;
 }
+
+@media screen and (max-width: 467px) {
+    .form-page__button_type_register {
+        margin-top: 109px;
+    }    
+}
+
 
 .form-page__question {
     display: block;
@@ -99,6 +125,14 @@
     line-height: normal;
 }
 
+@media screen and (max-width: 467px) {
+    .form-page__question {
+        font-size: 12px;
+        margin-top: 14px;
+    } 
+}
+
+
 .form-page__link {
     display: inline-block;
     color: #4285F4;
@@ -109,6 +143,12 @@
     font-weight: 400;
     line-height: normal;
     text-decoration: none;
+}
+
+@media screen and (max-width: 467px) {
+    .form-page__link {
+        font-size: 12px;
+    }
 }
 
 .form-page__link:hover {
