--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -48,7 +48,7 @@
     margin: 0;
     color: #8B8B8B;
     text-align: center;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 13px;
     font-style: normal;
     font-weight: 400;
@@ -75,7 +75,7 @@
     display: flex;
     justify-content: space-between;
     color: #FFF;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 13px;
     font-style: normal;
     font-weight: 400;
