--- a/src/components/Header/HeaderLoginButtons/HeaderLoginButtons.css
+++ b/src/components/Header/HeaderLoginButtons/HeaderLoginButtons.css
@@ -15,7 +15,7 @@
     height: 32px;
     background-color: #073042;
     color: #FFF;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
@@ -44,7 +44,7 @@
     border-radius: 3px;
     background-color: #3DDC84;
     color: #000;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
