--- a/src/components/Header/HeaderNavigate/HeaderNavigate.css
+++ b/src/components/Header/HeaderNavigate/HeaderNavigate.css
@@ -64,11 +64,15 @@
     background-color: #202020;
     color: #FFF;
     text-align: right;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 13px;
     font-style: normal;
     font-weight: 500;
     line-height: 18px;
+}
+
+.header__nav-link:hover {
+    opacity: 0.8;
 }
 
 .header__nav-link_type_logged-in {
@@ -88,13 +92,17 @@
     background: #202020;
     box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
     color: #FFF;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 13px;
     font-style: normal;
     font-weight: 500;
     line-height: 12px;
     width: 100px;
     height: 32px;
+}
+
+.header__account-button:hover {
+    opacity: 0.8;
 }
 
 .header__account-button_type_logged-in {
