--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -43,7 +43,7 @@
     box-sizing: border-box;
     padding-bottom: 23px;
     margin: 0;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -74,12 +74,13 @@
     .about-project__list {
         gap: 30px;
         margin-bottom: 94px;
-        padding-top: 61px;
+        padding-top: 70px;
     }
 }
 
 @media screen and (max-width: 467px) {
     .about-project__list {
+        padding-top: 60px;
         flex-direction: column;
         gap: 59px;
         margin-bottom: 60px;
@@ -106,7 +107,7 @@
 
 .about-project__subtitle {
     margin: 0;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -124,7 +125,7 @@
 .about-project__description {
     margin: 0;
     max-width: 550px;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -181,7 +182,7 @@
     height: 36px;
     max-width: 228px;
     color: #000;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -222,7 +223,7 @@
     height: 36px;
     max-width: 912px;
     color: #FFF;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -231,7 +232,7 @@
 .about-project__chart-info {
     margin: 0;
     color: #8B8B8B;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
