--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -41,7 +41,7 @@
 .portfolio__title {
     margin: 0;
     color: #8B8B8B;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -72,7 +72,7 @@
 }
 
 .portfolio__bullet {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
     height: 69px;
     border-bottom: 1px solid #E6E6E6;
@@ -89,11 +89,12 @@
 }
 
 .portfolio__link {
-    display: inline-block;
+    display: flex;
+    gap: 10px;
     height: 50px;
     margin: 0;
     color: #FFF;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
@@ -120,11 +121,11 @@
 }
 
 .portfolio__link-img {
-    display: block;
-    margin: 18px 5px 0 0;
+    display: inline-block;
+    margin: 18px 5px 0 auto;
     height: 18px;
     width: 18px;
-    background: url('../../../images/link-image-portfolio-min-mobile.svg') center no-repeat;
+    background: url('../../../images/link-image-portfolio-min.svg') center no-repeat;
 }
 
 .portfolio__link-img:hover {
@@ -135,6 +136,7 @@
     .portfolio__link-img {
         height: 10px;
         width: 10px;
-        margin: 17px 4px 0 0;
+        margin: 17px 4px 0 auto;
+        background: url('../../../images/link-image-portfolio-min-mobile.svg') center no-repeat;
     }
 }
