--- a/src/components/Movies/MoviesCardList/MovieCardList.css
+++ b/src/components/Movies/MoviesCardList/MovieCardList.css
@@ -9,6 +9,12 @@
     }
 }
 
+@media screen and (max-width: 467px) {
+    .movie-block {
+        min-height: 725px;
+    }
+}
+
 .movie-block__wrapper {
     box-sizing: border-box;
     padding-top: 70px;
@@ -41,13 +47,13 @@
     list-style-type: none;
     padding: 0;
     gap: 37px 24px;
-    /* margin: 0 auto; */
     align-items: flex-start;
 }
 
 @media screen and (max-width: 865px) {
     .movie-block__list {  
         gap: 30px 30px;
+        width: 708px;
     }
 }
 
