--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -47,7 +47,7 @@
     padding-left: 22px;
     padding-right: 22px;
     color: #8B8B8B;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 13px;
     font-style: normal;
     font-weight: 400;
@@ -84,13 +84,13 @@
 }
 
 .search-form__input:focus {
-    outline: none;
+    outline: 1px solid white;
 }
 
 .search-form__text {
     margin: 0;
     color: #FFF;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
