--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -4,7 +4,6 @@
 
 @media screen and (max-width: 865px) {
     .profile {
-        /* height: 100vh; */
         margin-top: 236px;
     }
 }
@@ -23,7 +22,7 @@
 .profile__title {
     color: #FFF;
     text-align: center;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 24px;
     font-style: normal;
     font-weight: 500;
@@ -44,7 +43,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 280px;
+    /* height: 280px; */
     max-width: 410px;
     margin-top: 105px;
 }
@@ -81,7 +80,7 @@
     max-width: 50%;
     margin: 0;
     color: #FFF;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 11px;
     font-style: normal;
     font-weight: 500;
@@ -89,13 +88,14 @@
 }
 
 .profile__user-input {
+    position: relative;
     outline: none;
     padding: 0;
     background-color: #202020;
     border: none;
     color: #FFF;
     text-align: right;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 11px;
     font-style: normal;
     font-weight: 400;
@@ -105,24 +105,30 @@
     overflow: hidden;
 }
 
+.profile__user-input:focus {
+    outline: 1px solid white;
+    border-radius: 3px;
+}
+
 .profile__control {
     justify-content: end;
-    height: 75px;
-    /* margin-top: 20px; */
+    align-items: center;
+    height: 63px;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 12px;
+    margin-top: 192px;
 }
 
 @media screen and (max-width: 865px) {
     .profile__control {
-        height: 63px;
+        margin-top: 181px;
     }
 }
 
-@media screen and (max-width: 865px) {
+@media screen and (max-width: 467px) {
     .profile__control {
-        margin-top: 164px;
+        margin-top: 349px;
     }
 }
 
@@ -131,7 +137,7 @@
     display: none;
     color: #FF004C;
     text-align: center;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 11px;
     font-style: normal;
     font-weight: 400;
@@ -150,7 +156,7 @@
     padding: 0;
     color: #FFF;
     text-align: center;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 13px;
     font-style: normal;
     font-weight: 400;
@@ -158,7 +164,7 @@
     background-color: #202020;
 }
 
-@media screen and (max-width: 865px) {
+@media screen and (max-width: 467px) {
     .profile__edit-button {
         font-size: 12px;
     }
@@ -169,14 +175,13 @@
 }
 
 .profile__logout-button {
-    align-self: center;
     height: 20px;
     cursor: pointer;
     border: none;
     padding: 0;
     color: #EE3465;
     text-align: center;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 13px;
     font-style: normal;
     font-weight: 500;
@@ -184,7 +189,7 @@
     background-color: #202020;
 }
 
-@media screen and (max-width: 865px) {
+@media screen and (max-width: 467px) {
     .profile__logout-button {
         font-size: 12px;
     }
@@ -204,7 +209,7 @@
     background: #3456F3;
     color: #FFF;
     text-align: center;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
@@ -235,4 +240,3 @@
 .profile__save-button_disabled {
 
 }
-
