--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,7 +1,7 @@
 .header__title_type_form-page {
     margin: 0;
     color: #FFF;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 24px;
     font-style: normal;
     font-weight: 500;
