--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -77,6 +77,10 @@
     background: url('../../../images/find-icon.svg') center no-repeat;
 }
 
+.search-form__button:hover {
+    opacity: 0.8;
+}
+
 @media screen and (max-width: 467px) {
     .search-form__button {
         right: 10px;
