--- a/src/styles/commonStyles.css
+++ b/src/styles/commonStyles.css
@@ -227,6 +227,10 @@
     line-height: normal;
 }
 
+.expand-button__button:hover {
+    opacity: 0.8;
+}
+
 @media screen and (max-width: 467px) {
     .expand-button__button {
         width: 300px;
